--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,42 +17,13 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        app:layout_constraintTop_toBottomOf="@id/app_bar"
-        android:padding="@dimen/_10sdp"
-        android:text="@string/recent_items"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textStyle="bold"
-
-        android:id="@+id/recent_items_title"
-        android:layout_height="wrap_content"/>
-
-
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:id="@+id/horizontal_scroll"
-        app:layout_constraintTop_toBottomOf="@id/recent_items_title"
-        android:layout_height="wrap_content"
-        >
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:id="@+id/horizontal_linear"
-            android:padding="@dimen/_5sdp"
-            android:background="@color/light_gray"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-        </LinearLayout>
-    </HorizontalScrollView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/search_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        app:layout_constraintTop_toBottomOf="@id/horizontal_scroll"
+        app:layout_constraintTop_toBottomOf="@id/app_bar"
         android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager">
 
@@ -68,7 +39,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:textSize="@dimen/_20ssp"
         android:visibility="visible"
-        android:text="Search Movies"/>
+        android:text="Search Posts"/>
 
     <View
         android:layout_width="match_parent"
