--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -1,52 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:padding="@dimen/_3sdp"
+    android:layout_margin="@dimen/_3sdp"
+    android:elevation="@dimen/_5sdp"
+    app:cardUseCompatPadding="true"
+    android:layout_height="200dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginStart="@dimen/_10sdp"
+    android:layout_marginEnd="@dimen/_10sdp"
     android:layout_marginTop="@dimen/_10sdp"
     android:layout_marginBottom="@dimen/_10sdp"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/image_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_launcher_background" />
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/image_shadow" />
-
     <TextView
-        android:id="@+id/title_text_view"
+        android:id="@+id/id_text_view"
         android:layout_width="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/release_date_text_view"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         tools:text="@string/app_name"
         android:maxLines="1"
-        android:textColor="@android:color/white"
-        android:padding="3dp"
+        android:textColor="@android:color/black"
+        android:padding="@dimen/_15sdp"
+        android:textSize="@dimen/_20ssp" />
+
+    <TextView
+        android:id="@+id/userId_text_view"
+        android:layout_width="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/id_text_view"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        tools:text="@string/app_name"
+        android:maxLines="1"
+        android:textColor="@android:color/black"
+        android:padding="@dimen/_5sdp"
         android:textSize="@dimen/_14ssp" />
-    <TextView
-        android:id="@+id/release_date_text_view"
-        android:layout_width="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        tools:text="@string/app_name"
-        android:textColor="@android:color/white"
-        android:maxLines="1"
-        android:padding="3dp"
-        android:textSize="@dimen/_12ssp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
